homecluster/droppedneedle/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: droppedneedle
  labels:
    app.kubernetes.io/name: droppedneedle
    app.kubernetes.io/instance: droppedneedle
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: droppedneedle
    app.kubernetes.io/instance: droppedneedle
  ports:
    - name: http
      port: 8688
      targetPort: http
      protocol: TCP
