homecluster/droppedneedle/manifests/http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: droppedneedle-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: droppedneedle-http-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-droppedneedle-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: droppedneedle.local.tylermarques.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: droppedneedle
                port:
                  number: 8688
